@@ -19,6 +19,8 @@ CVS HEAD (2007-06-17):
 * Now using the builtin pucrunch support in the latest ld-tigcc instead of
   ttpack and ttbin2oth. This also adds support for outputting unwrapped binaries
   for compressed files.
+* Now using the new ld-tigcc switch --output-data-var to set the data variable
+  file name on the computer instead of the old renaming hack.
 
 
 KTIGCC 1.06 (2006-11-25):
